--- a/MNIST_working.ipynb
+++ b/MNIST_working.ipynb
@@ -10,7 +10,7 @@
     "Collect Data: Capture and label images of our handwriting.\n",
     "    [ ] Chelsey\n",
     "    [ ] Shawn\n",
-    "    [ ] Starter data set (MNIST)\n",
+    "    [X] Starter data set (MNIST)\n",
     "\n",
     "Preprocess Data: Resize, normalize, and encode the images and labels.\n",
     "\n",
